reorganiza processo de verificar registos na lib